--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 </head>
 <body>
     <h1>Cím megadása</h1>
+    <p>Első bekezdés</p>
+    <p>Második bekezdés</p>
+    <ul>
+        <li>felsorolás</li>
+    </ul>
 </body>
 </html>
