--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <p>Második bekezdés</p>
     <ul>
         <li>felsorolás</li>
+        <li>felsorolás 2</li>
+        <li>felsorolás 3</li>
     </ul>
 </body>
 </html>
